# Zastosowanie_wybranych_metod_uczenia_maszynowego_w_przewidywaniu_lepko-ci_cieczy_jonowych

./: .gitignore  README.md  data.py  descriptor_list.py  main.py  model.py  pyproject.toml  requirements.txt  run.py  visual.py
