[project]
name = "projekt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ilthermopy>=1.1.0",
    "kaleido==0.2.1",
    "mlflow>=2.17.2",
    "padelpy>=0.1.16",
    "pandas>=2",
    "pycaret==3.3.2",
    "rdkit>=2024.3.6",
    "scikit-learn>=1.4.2",
]

[tool.pylyzer]
path = "./.venv/bin/python"

[dependency-groups]
dev = [
    "ipython[qtconsole]>=8.29.0",
    "qtpy>=2.4.2",
]
